
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-07-11 DariusIII
	Chg: Update Omicron css/js to AdminLTE 2.3.5
2016-07-08 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.2.4


2016-07-08 niel
	Chg: Clean up checking of version string from XML file.
	Chg: Put 'v' in front of XML files version in ./zed version output.
2016-07-07 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.2.3.
	Mrg: Versions-Refactor branch. Changes all scripts to use the app/extensions/util/Versions
		class instead of the older nzedb\utility\Versions.
	Add: Updates to app\extensions\utils\Versions to add the xml file updates required by runHooks.php script.
	Chg: Updates to runHooks script to use app\extensions\util\Versions class.


2016-07-07 niel
	Add: Create new bootstrap file (.../bootstrap.php) to enable nzedb and lithium's app
		libraries to load together.
		 New files should use it as the base require_once instead of indexer.php. Old file will be
		converted over when it is convenient.
	Fix: Switch tmux start script to use new bootstrap file (Fixes issue #2205).
	Fix: Actually commit the new bootstrap file ;-)
	Chg: Updated fxp/composer-asset-plugin dependency to v1.2.0
2016-07-06 niel
	Fix: Other category not available on new installs, due to insert query still using 'category' table.
	Add: Included lithium app into the autoload process. All of its classes should now be
		available to nZEDb (Closes issue #2205)
2016-07-04 DariusIII
	Fix: Malformed RSS for my movies and my shows RSS
2016-07-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.2.


2016-06-30 niel
	Chg: Make screen simple-expanded script executable.
2016-06-30 DariusIII