@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-07-12 DariusIII
+	Fix: Reset user grabs and api requests in Charisma/Gamma/Gentele/Omicron themes (fix issue #2206)
 2016-07-11 DariusIII
 	Chg: Update Omicron css/js to AdminLTE 2.3.5
 2016-07-08 niel
